
-- 1. ENUMS & TYPES
DO $$ BEGIN
    CREATE TYPE user_role AS ENUM ('superadmin', 'admin', 'recruiter', 'chef_departement');
EXCEPTION WHEN duplicate_object THEN null; END $$;

DO $$ BEGIN
    CREATE TYPE user_status AS ENUM ('active', 'pending', 'inactive');
EXCEPTION WHEN duplicate_object THEN null; END $$;

DO $$ BEGIN
    CREATE TYPE job_status AS ENUM ('draft', 'published', 'internal', 'closed');
EXCEPTION WHEN duplicate_object THEN null; END $$;

DO $$ BEGIN
    CREATE TYPE experience_level AS ENUM ('junior', 'mid', 'senior', 'expert');
EXCEPTION WHEN duplicate_object THEN null; END $$;

DO $$ BEGIN
    CREATE TYPE contract_type AS ENUM ('cdi', 'cdd', 'internship', 'apprenticeship', 'freelance');
EXCEPTION WHEN duplicate_object THEN null; END $$;

DO $$ BEGIN
    CREATE TYPE work_mode AS ENUM ('onsite', 'hybrid', 'remote');
EXCEPTION WHEN duplicate_object THEN null; END $$;

-- 2. CORE TABLES --
-- Companies
CREATE TABLE IF NOT EXISTS public.hr_companies (
    id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
    name text NOT NULL,
    siret text,
    address text,
    city text,
    zip_code text,
    country text,
    email text,
    phone text,
    website text,
    description text,
    values text,
    benefits jsonb DEFAULT '[]'::jsonb,
    logo_url text,
    primary_color text,
    linkedin_url text,
    twitter_url text,
    sector text,
    created_at timestamptz DEFAULT now()
);

-- Departments
CREATE TABLE IF NOT EXISTS public.hr_departments (
    id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
    company_id uuid REFERENCES public.hr_companies(id) ON DELETE CASCADE,
    name text NOT NULL,
    description text,
    responsible_id uuid, -- Link to hr_profiles.id later
    color text,
    icon text,
    created_at timestamptz DEFAULT now()
);

-- Profiles (Linked to Supabase Auth)
CREATE TABLE IF NOT EXISTS public.hr_profiles (
    id uuid REFERENCES auth.users(id) ON DELETE CASCADE PRIMARY KEY,
    email text UNIQUE NOT NULL,
    first_name text,
    last_name text,
    phone text,
    role user_role DEFAULT 'recruiter',
    status user_status DEFAULT 'pending',
    company_id uuid REFERENCES public.hr_companies(id),
    department_id uuid REFERENCES public.hr_departments(id),
    avatar_url text,
    preferences jsonb DEFAULT '{"theme": "dark", "lang": "fr"}'::jsonb,
    created_at timestamptz DEFAULT now(),
    updated_at timestamptz DEFAULT now()
);

-- Add missing Foreign Key for departments.responsible_id
ALTER TABLE public.hr_departments 
ADD CONSTRAINT fk_responsible 
FOREIGN KEY (responsible_id) REFERENCES public.hr_profiles(id);

-- Jobs
CREATE TABLE IF NOT EXISTS public.hr_jobs (
    id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
    company_id uuid REFERENCES public.hr_companies(id) ON DELETE CASCADE,
    department_id uuid REFERENCES public.hr_departments(id) ON DELETE SET NULL,
    title text NOT NULL,
    contract_type contract_type,
    location text,
    work_mode work_mode,
    description_company text,
    missions text,
    profile_searched text,
    experience_level experience_level,
    languages jsonb DEFAULT '[]'::jsonb,
    perks jsonb DEFAULT '[]'::jsonb,
    salary_min numeric,
    salary_max numeric,
    currency text DEFAULT 'TND',
    pay_frequency text,
    filtering_questions jsonb DEFAULT '[]'::jsonb,
    attachments_required jsonb DEFAULT '["cv"]'::jsonb,
    notification_email text,
    deadline date,
    status job_status DEFAULT 'draft',
    platforms jsonb DEFAULT '[]'::jsonb,
    created_at timestamptz DEFAULT now()
);

-- Candidates
CREATE TABLE IF NOT EXISTS public.candidat_applications (
    id uuid DEFAULT gen_random_uuid() PRIMARY KEY,
    job_id uuid REFERENCES public.hr_jobs(id) ON DELETE CASCADE,
    first_name text,
    last_name text,
    email text,
    avatar_url text,
    score_ai integer DEFAULT 0,
    match_status text,
    created_at timestamptz DEFAULT now()
);

-- Audit Logs
CREATE TABLE IF NOT EXISTS public.audit_logs (
    id bigserial PRIMARY KEY,
    user_id uuid REFERENCES public.hr_profiles(id) ON DELETE SET NULL,
    action text NOT NULL,
    details jsonb,
    created_at timestamptz DEFAULT now()
);

-- 3. TRIGGER: AUTO-CREATE PROFILE --
CREATE OR REPLACE FUNCTION public.handle_new_user()
RETURNS trigger AS $$
BEGIN
  INSERT INTO public.hr_profiles (id, email, first_name, last_name, role, status, company_id, department_id)
  VALUES (
    new.id, 
    new.email, 
    new.raw_user_meta_data->>'first_name', 
    new.raw_user_meta_data->>'last_name',
    COALESCE(new.raw_user_meta_data->>'role', 'recruiter')::user_role, 
    'pending',
    NULLIF(new.raw_user_meta_data->>'company_id', '')::uuid,
    NULLIF(new.raw_user_meta_data->>'department_id', '')::uuid
  );
  RETURN new;
END;
$$ LANGUAGE plpgsql SECURITY DEFINER;

-- Trigger creation (only if it doesn't exist)
DO $$ BEGIN
    IF NOT EXISTS (SELECT 1 FROM pg_trigger WHERE tgname = 'on_auth_user_created') THEN
        CREATE TRIGGER on_auth_user_created
          AFTER INSERT ON auth.users
          FOR EACH ROW EXECUTE PROCEDURE public.handle_new_user();
    END IF;
END $$;

-- 4. Helper Function for RLS (SECURITY DEFINER bypasses RLS when checking role)
CREATE OR REPLACE FUNCTION public.is_superadmin()
RETURNS boolean AS $$
DECLARE
  v_role text;
BEGIN
  SELECT role::text INTO v_role FROM public.hr_profiles WHERE id = auth.uid();
  RETURN v_role = 'superadmin';
END;
$$ LANGUAGE plpgsql SECURITY DEFINER SET search_path = public;

-- 5. ROW LEVEL SECURITY (Initial Settings) --
ALTER TABLE public.hr_profiles ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.hr_companies ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.hr_jobs ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.candidat_applications ENABLE ROW LEVEL SECURITY;

-- Profiles Policy
CREATE POLICY "Users can view own profile" ON public.hr_profiles FOR SELECT USING (auth.uid() = id);
CREATE POLICY "Users can update own profile" ON public.hr_profiles FOR UPDATE USING (auth.uid() = id);
CREATE POLICY "SuperAdmins can manage all profiles" ON public.hr_profiles FOR ALL USING (public.is_superadmin());

-- Companies Policy
CREATE POLICY "Anyone can view companies" ON public.hr_companies FOR SELECT USING (true);
CREATE POLICY "SuperAdmins can manage companies" ON public.hr_companies FOR ALL USING (public.is_superadmin());

-- Jobs Policy
CREATE POLICY "Anyone can view published jobs" ON public.hr_jobs FOR SELECT USING (status = 'published');
CREATE POLICY "Recruiters can view company jobs" ON public.hr_jobs FOR SELECT USING (
    EXISTS (SELECT 1 FROM public.hr_profiles WHERE hr_profiles.id = auth.uid() AND hr_profiles.company_id = hr_jobs.company_id)
);
CREATE POLICY "SuperAdmins can manage all jobs" ON public.hr_jobs FOR ALL USING (public.is_superadmin());
