@startuml
left to right direction
hide methods
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle

legend left
  ? = nullable / optional
  json = flexible Mongo subdocument / map
  Owning side = class storing the reference field
endlegend

note "Persisted MongoDB collections are modeled directly.\nDerived API-only fields are omitted.\nWhere runtime writes go beyond a declared Pydantic enum, the stored runtime shape wins." as N0

package "Org & Identity" {
  class "hr_companies" as hr_companies <<collection>> {
    _id: ObjectId {PK}
    name: str
    siret: str?
    domain: str?
    size: str?
    description: str?
    values: str[]?
    benefits: str[]?
    email: str?
    phone: str?
    contact_email: str?
    contact_phone: str?
    website: str?
    address: str?
    city: str?
    zip_code: str?
    country: str?
    latitude: float?
    longitude: float?
    logo_url: str?
    primary_color: str?
    linkedin: str?
    twitter: str?
    status: str
    onboarding_done: bool
    created_at: datetime
    updated_at: datetime
  }

  class "hr_departments" as hr_departments <<collection>> {
    _id: ObjectId {PK}
    name: str
    company_id: str
    description: str?
    manager_id: str?
    status: str
    color: str
    icon: str
    created_at: datetime
    updated_at: datetime
  }

  class "hr_profiles" as hr_profiles <<collection>> {
    _id: str {PK}
    first_name: str?
    last_name: str?
    email: str? {unique}
    role: str
    status: str
    company_id: str? {index}
    department_id: str?
    phone: str?
    position: str?
    avatar_url: str?
    bio: str?
    skills: json[]?
    experience: json[]?
    education: json[]?
    social_links: json?
    preferences: json?
    metadata: json?
    created_at: datetime
    updated_at: datetime
  }

  class "parametrage" as parametrage <<collection>> {
    _id: ObjectId {PK}
    company_id: str
    category: str
    parameters: json
    updated_at: str
    updated_by: str?
  }
}

package "Candidate" {
  class "candidates" as candidates <<collection>> {
    _id: ObjectId {PK}
    user_id: str {AK}
    email: str?
    firstName: str?
    lastName: str?
    birthDate: str?
    title: str?
    about: str?
    address: str?
    phone: str?
    linkedinUrl: str?
    github: str?
    twitter: str?
    website: str?
    profilePicture: str?
    profileImage: str?
    coverImage: str?
    cv: json?
    hobbies: Hobby[]
    skills: Skill[]
    languages: Language[]
    educations: Education[]
    experiences: Experience[]
    certificates: Certificate[]
    jobPreferences: JobPreferences?
    settings: json?
    settings_updated_at: datetime?
    preferences: json?
    ratings: CandidateRating[]?
    qualification_verifications: json?
    totp_secret: str?
    totp_enabled: bool?
    totp_verified_at: datetime?
    email_code: str?
    email_code_sent_at: datetime?
    email_2fa_enabled: bool?
    email_2fa_verified_at: datetime?
    embedding: float[]?
    profileStrength: int
    profileMissing: str[]
    created_at: datetime
    updated_at: datetime
  }

  class "saved_jobs" as saved_jobs <<collection>> {
    _id: ObjectId {PK}
    candidate_id: str
    job_id: str
    saved_at: datetime
  }

  class Hobby <<embedded>> {
    id: json?
    name: str?
  }

  class Skill <<embedded>> {
    id: json?
    name: str?
    level: json?
  }

  class Language <<embedded>> {
    id: json?
    name: str?
    level: json?
  }

  class Education <<embedded>> {
    id: json?
    degree: str?
    institution: str?
    fieldOfStudy: str?
    startYear: str?
    endYear: str?
    ongoing: bool?
    socialLink: str?
    certificateName: str?
    certificate: json?
  }

  class Experience <<embedded>> {
    id: json?
    jobTitle: str?
    company: str?
    type: str?
    position: str?
    startMonth: str?
    startYear: str?
    endMonth: str?
    endYear: str?
    ongoing: bool?
    description: str?
    documentName: str?
    document: json?
  }

  class Certificate <<embedded>> {
    id: json?
    name: str?
    issuer: str?
    issuingOrganization: str?
    year: str?
    issueDate: str?
    description: str?
    url: str?
    documentName: str?
    document: json?
  }

  class JobPreferences <<embedded>> {
    jobTypes: json
    workLocation: json
    salaryExpectation: str
    availability: str
    preferredIndustries: json
    willRelocate: json
  }

  class CandidateRating <<embedded>> {
    hr_id: str
    hr_email: str
    hr_name: str
    hr_role: str
    rate: int
    created_at: datetime
    updated_at: datetime
  }
}

package "Recruitment" {
  class AIAutomationFilter <<embedded>> {
    enabled: bool
    top_x_candidates: int?
    top_y_candidates: int?
  }

  class AIAutomationQuizConfig <<embedded>> {
    title: str
    document_id: str
    document_title: str
    total_questions: int
    duration_minutes: int
    weight_percentage: int
    difficulty_mix: json
    deadline_mode: str
    deadline_at: str
  }

  class AIAutomationQuizStage <<embedded>> {
    enabled: bool
    approve_top_z_to_interview: int?
    quizzes: AIAutomationQuizConfig[]
  }

  class AIAutomationConfig <<embedded>> {
    enabled: bool
    trigger_mode: str
    execution_enabled: bool
    vector_filter: AIAutomationFilter
    ai_score_filter: AIAutomationFilter
    quiz_stage: AIAutomationQuizStage
  }

  class "hr_jobs" as hr_jobs <<collection>> {
    _id: ObjectId {PK}
    title: str
    company_id: str {index}
    department_id: str?
    description: str
    requirements: str[]
    location: str?
    type: str
    status: str
    salary_range: str?
    missions: json?
    work_mode: str?
    experience_level: str?
    screening_questions: str[]
    deadline: str?
    notification_email: str?
    benefits: str[]
    require_motivation_letter: bool
    ai_automation: AIAutomationConfig?
    allow_hr: bool
    embedding: float[]?
    ai_automation_run_id: str?
    ai_automation_summary: json?
    deadline_processed: bool?
    deadline_processed_at: datetime?
    deadline_processing: bool?
    deadline_processing_started_at: datetime?
    deadline_last_error: str?
    deadline_last_error_at: datetime?
    quiz_stage_processed: bool?
    quiz_stage_processed_at: datetime?
    quiz_stage_processing: bool?
    quiz_stage_processing_started_at: datetime?
    quiz_stage_last_error: str?
    quiz_stage_last_error_at: datetime?
    created_at: datetime {index}
    updated_at: datetime
  }

  class "job_applications" as job_applications <<collection>> {
    _id: ObjectId {PK}
    candidate_id: str
    user_id: str?
    job_id: str
    motivation_letter: str?
    status: str
    profile_snapshot: json?
    applied_at: datetime
    updated_at: datetime?
    vector_match_score: float?
    vector_matched_at: datetime?
    ai_score: float?
    ai_justification: str?
    ai_evaluated_at: datetime?
    automation_run_id: str?
    automation_vector_rank: int?
    automation_ai_rank: int?
    automation_vector_score: float?
    automation_ai_score: float?
    automation_final_score: float?
    automation_interview_rank: int?
    automation_finalized_at: datetime?
    quiz_status: str?
    last_quiz_sent_at: datetime?
    quiz_score: float?
    quiz_attempts: int?
    quiz_completed_at: datetime?
    quiz_ai_analysis: str?
    quiz_ai_evaluated_at: datetime?
    interview_id: str?
    interview_proposal_id: str?
    interview_status: str?
    interview_start_time: datetime?
    interview_end_time: datetime?
  }

  class "candidat_applications" as candidat_applications <<legacy>> {
    _id: ObjectId {PK}
    candidate_id: str? {index}
    user_id: str?
    company_id: str? {index}
    job_id: str? {index}
    status: str?
    ai_score: float? {index}
    ai_justification: str?
    profile_snapshot: json?
    created_at: datetime? {index}
    updated_at: datetime?
  }
}

package "Interviews & Notifications" {
  class "hr_interview_proposals" as hr_interview_proposals <<collection>> {
    _id: ObjectId {PK}
    application_id: str
    company_id: str?
    candidate_name: str
    candidate_email: str
    slots: datetime[]
    duration_minutes: int
    interview_type: str
    message: str?
    recruiter_id: str?
    status: str
    created_at: datetime
    selected_slot: datetime?
  }

  class "hr_interviews" as hr_interviews <<collection>> {
    _id: ObjectId {PK}
    application_id: str?
    company_id: str
    recruiter_id: str?
    candidate_name: str
    candidate_email: str
    type: str
    start_time: datetime
    end_time: datetime
    status: str
    emotion_history: json[]?
    transcript: json[]?
    ai_analysis: json?
    google_event_id: str?
    reminder_24h_sent: bool?
    reminder_1h_sent: bool?
    reminder_5m_sent: bool?
    missed_notified: bool?
    started_at: datetime?
    ended_at: datetime?
    created_at: datetime
  }

  class "notifications" as notifications <<collection>> {
    _id: ObjectId {PK}
    user_id: str
    type: str
    category: str
    title: str
    message: str
    link: str?
    is_read: bool
    metadata: json
    created_at: datetime
  }
}

package "Quiz & Content" {
  class "fs.files" as fs_files <<system>> {
    _id: ObjectId {PK}
    filename: str
    length: long
    chunkSize: int
    uploadDate: datetime
    metadata: json?
  }

  class "fs.chunks" as fs_chunks <<system>> {
    _id: ObjectId {PK}
    files_id: ObjectId
    n: int
    data: binData
  }

  class SectionInfo <<embedded>> {
    title: str
    start_chunk: int
    end_chunk: int
  }

  class DocumentMetadata <<embedded>> {
    page_count: int?
    language: str?
    category: str?
  }

  class "quiz_documents" as quiz_documents <<collection>> {
    _id: ObjectId {PK}
    title: str
    filename: str
    file_type: str
    gridfs_file_id: str?
    uploaded_by: str
    company_id: str?
    uploaded_at: datetime
    status: str
    total_chunks: int
    total_tokens: int
    sections: SectionInfo[]
    metadata: DocumentMetadata
    extracted_text: str?
  }

  class "quiz_chunks" as quiz_chunks <<collection>> {
    _id: ObjectId {PK}
    document_id: ObjectId
    chunk_index: int
    text: str
    token_count: int
    section: str
    embedding: float[]?
    usage_count: int
    last_used_at: datetime?
    question_types_generated: str[]
    created_at: datetime
  }

  class QuizQuestion <<embedded>> {
    id: str
    type: str
    difficulty: str
    question: str
    options: str[]?
    correct_index: int?
    correct_answer: json?
    explanation: str
    source_chunks: str[]
    rubric: str?
  }

  class AnswerSubmission <<embedded>> {
    question_id: str
    answer: json
  }

  class "quizzes" as quizzes <<collection>> {
    _id: ObjectId {PK}
    title: str
    document_id: ObjectId?
    document_ids: ObjectId[]?
    multi_document: bool?
    template_id: ObjectId?
    generated_by: str
    company_id: str?
    application_id: str?
    candidate_id: str?
    generated_at: datetime
    updated_at: datetime?
    published_at: datetime?
    started_at: datetime?
    submitted_at: datetime?
    deadline: datetime?
    duration_minutes: int
    difficulty_distribution: json
    questions: QuizQuestion[]
    source_chunk_ids: str[]
    overlap_score: float?
    status: str
    score: float?
    candidate_answers: AnswerSubmission[]?
    ai_analysis: str?
    ai_analyzed_at: datetime?
    automation_run_id: str?
    automation_quiz_key: str?
    automation_job_id: str?
    auto_generated: bool?
    weight_percentage: int?
  }

  class QuestionTypeConfig <<embedded>> {
    count: int
    options_count: int?
  }

  class DistractorRules <<embedded>> {
    min_plausibility: str
    avoid_obvious_wrong: bool
  }

  class TemplateConfig <<embedded>> {
    total_questions: int
    question_types: QuestionTypeConfig[]
    difficulty_mix: json
    distractor_rules: DistractorRules
    sections_filter: str[]
    max_chunk_reuse: int
  }

  class "quiz_templates" as quiz_templates <<collection>> {
    _id: ObjectId {PK}
    name: str
    description: str
    created_by: str
    created_at: datetime
    config: TemplateConfig
  }

  class "quiz_audit" as quiz_audit <<collection>> {
    _id: ObjectId {PK}
    action: str
    user_id: str
    timestamp: datetime
    details: json
  }
}

candidates *-- "0..*" Hobby : hobbies
candidates *-- "0..*" Skill : skills
candidates *-- "0..*" Language : languages
candidates *-- "0..*" Education : educations
candidates *-- "0..*" Experience : experiences
candidates *-- "0..*" Certificate : certificates
candidates *-- "0..1" JobPreferences : jobPreferences
candidates *-- "0..*" CandidateRating : ratings

hr_jobs *-- "0..1" AIAutomationConfig : ai_automation
AIAutomationConfig *-- "1" AIAutomationFilter : vector_filter
AIAutomationConfig *-- "1" AIAutomationFilter : ai_score_filter
AIAutomationConfig *-- "1" AIAutomationQuizStage : quiz_stage
AIAutomationQuizStage *-- "0..*" AIAutomationQuizConfig : quizzes

quiz_documents *-- "0..*" SectionInfo : sections
quiz_documents *-- "1" DocumentMetadata : metadata
quizzes *-- "0..*" QuizQuestion : questions
quizzes *-- "0..*" AnswerSubmission : candidate_answers
quiz_templates *-- "1" TemplateConfig : config
TemplateConfig *-- "0..*" QuestionTypeConfig : question_types
TemplateConfig *-- "1" DistractorRules : distractor_rules

hr_departments "0..*" --> "1" hr_companies : company_id
hr_profiles "0..*" --> "0..1" hr_companies : company_id
hr_profiles "0..*" --> "0..1" hr_departments : department_id
parametrage "0..*" --> "1" hr_companies : company_id
parametrage "0..*" ..> "0..1" hr_profiles : updated_by

saved_jobs "0..*" --> "1" candidates : candidate_id
saved_jobs "0..*" --> "1" hr_jobs : job_id

job_applications "0..*" --> "1" candidates : candidate_id
job_applications "0..*" --> "1" hr_jobs : job_id
candidat_applications "0..*" --> "0..1" candidates : candidate_id/user_id
candidat_applications "0..*" --> "0..1" hr_jobs : job_id

hr_jobs "0..*" --> "1" hr_companies : company_id
hr_jobs "0..*" --> "0..1" hr_departments : department_id
AIAutomationQuizConfig "0..*" --> "1" quiz_documents : document_id

hr_interview_proposals "0..*" --> "1" job_applications : application_id
hr_interview_proposals "0..*" --> "0..1" hr_companies : company_id
hr_interview_proposals "0..*" --> "0..1" hr_profiles : recruiter_id
job_applications "0..*" --> "0..1" hr_interview_proposals : interview_proposal_id

hr_interviews "0..*" --> "0..1" job_applications : application_id
hr_interviews "0..*" --> "1" hr_companies : company_id
hr_interviews "0..*" --> "0..1" hr_profiles : recruiter_id
job_applications "0..*" --> "0..1" hr_interviews : interview_id

notifications "0..*" ..> "0..1" candidates : user_id (candidate)
notifications "0..*" ..> "0..1" hr_profiles : user_id (HR/admin)

fs_files o-- "0..*" fs_chunks : files_id
quiz_documents "0..*" --> "0..1" fs_files : gridfs_file_id

quiz_chunks "0..*" --> "1" quiz_documents : document_id
quizzes "0..*" --> "0..1" quiz_documents : document_id
quizzes "0..*" --> "0..*" quiz_documents : document_ids (multi_document)
quizzes "0..*" --> "0..1" quiz_templates : template_id
quizzes "0..*" --> "0..1" job_applications : application_id
quizzes "0..*" --> "0..1" candidates : candidate_id
quizzes "0..*" --> "0..*" quiz_chunks : source_chunk_ids / questions.source_chunks

quiz_audit "0..*" ..> "0..1" quizzes : details.quiz_id
quiz_audit "0..*" ..> "0..1" quiz_documents : details.document_id
quiz_audit "0..*" ..> "0..1" quiz_templates : details.template_id

note bottom of candidates
Most candidate relations use candidates.user_id, not candidates._id.
The collection also stores authentication/2FA fields and embeddings.
end note

note bottom of quizzes
Single-document quizzes use document_id.
Merged quizzes use document_ids + multi_document = true.
Runtime writes also persist status = completed.
end note

note bottom of hr_profiles
Google Calendar OAuth material is stored under
preferences.google_calendar.*.
end note

note bottom of quiz_documents
Raw uploaded binaries are stored in the default GridFS bucket
(fs.files / fs.chunks) and referenced by gridfs_file_id.
extracted_text is temporary and later unset after chunking.
end note

note bottom of candidat_applications
Legacy fallback collection.
Only a partial schema is visible in the repository.
end note

@enduml
